# rust-backend

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  curls.md  docker-compose-run.yml  docker-compose.yml  entrypoint.sh  geoloc-data.db  sql.md  status-all  watch-filesystem
db/: geoloc-data.db
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
src/: handlers.rs  main.rs  position.rs  sqlite_adapter.rs  types.rs  util.rs
src/db/: mod.rs  models.rs  sql_adapter.rs  sql_worker.rs
