[package]
name = "backend-rust"
version = "0.0.1"
authors = ["Paul Seydel <seydel@zib.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
log = "0.4.11"
env_logger = "0.8.1"
uuid = { version = "0.8.1", features = ["serde"] }
