[package]
name = "geoloc-backend"
version = "0.0.1"
authors = ["Paul Seydel <Seydel.fnvd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "^0.15"
actix = "^0.11"
actix-rt = "^2.2"
actix-web = "^3.3"
log = "^0.4"
env_logger = "^0.8"
serde = { version="^1.0", features = ["derive"] } 
serde_json = "^1.0"
serde_yaml = "^0.4"
tokio = "1.4"
sqlx = { version = "0.4", features = ["runtime-actix-native-tls", "postgres", "uuid", "chrono", "json"]}
url = "^2.2"
uuid = { version = "^0.8", features = ["serde"] }
chrono = { version = "^0.4", features = ["serde"] }

#[patch.actix-rt]
#tokio = "0.3.7"
